--- a/FamilyVideoChat/src/main/res/values/strings.xml
+++ b/FamilyVideoChat/src/main/res/values/strings.xml
@@ -107,4 +107,6 @@
     <string name="isAuthVideoRev">视频主路下行</string>
     <string name="isSupportMultiVideo">是否支持多路视频输出</string>
     <string name="isOpenBackCameraFirst">是否先打开后置摄像头</string>
+
+    <string name="quit_tittle">是否退出</string>
 </resources>
